# datax

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  AGENTS.md  MODULE.bazel  README.md  cliff.toml  defs.bzl  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
codex-rs/app-server-daemon/: Cargo.toml
codex-rs/app-server-daemon/src/: lib.rs  remote_control_client.rs
codex-rs/backend-client/: Cargo.toml
codex-rs/backend-client/src/: client.rs
codex-rs/core-skills/: Cargo.toml
codex-rs/core-skills/src/: config_rules.rs  invocation_utils.rs  loader.rs  loader_tests.rs  mention_counts.rs  model.rs  render.rs  service_tests.rs
codex-rs/login/: BUILD.bazel  Cargo.toml
codex-rs/login/src/: lib.rs  token_data_tests.rs
codex-rs/login/src/auth/: external_bearer.rs  manager.rs  revoke.rs  storage.rs  storage_tests.rs
codex-rs/model-provider/: Cargo.toml
codex-rs/model-provider/src/: lib.rs
codex-rs/model-provider/src/amazon_bedrock/: error.rs
codex-rs/models-manager/: Cargo.toml
codex-rs/models-manager/src/: cache.rs  collaboration_mode_presets.rs  lib.rs  model_info.rs
codex-rs/plugin/: Cargo.toml
codex-rs/rollout/: Cargo.toml
codex-rs/rollout/src/: compression.rs  list.rs  metadata_tests.rs  recorder.rs  session_index.rs  session_index_tests.rs  sqlite_metrics.rs
codex-rs/secrets/: BUILD.bazel  Cargo.toml
codex-rs/secrets/src/: local.rs
codex-rs/stdio-to-uds/: Cargo.toml
codex-rs/stdio-to-uds/src/: main.rs
codex-rs/stdio-to-uds/tests/: stdio_to_uds.rs
codex-rs/tools/: Cargo.toml
codex-rs/tools/src/: code_mode.rs  code_mode_tests.rs  request_plugin_install.rs  request_plugin_install_tests.rs  responses_api.rs  tool_call.rs  tool_spec_tests.rs
datax-rs/agent-graph-store/: Cargo.toml
datax-rs/agent-graph-store/src/: local.rs  store.rs
datax-rs/analytics/: BUILD.bazel  Cargo.toml
datax-rs/analytics/src/: accepted_lines.rs  analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  facts.rs  lib.rs  reducer.rs
datax-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
datax-rs/app-server-client/: BUILD.bazel  Cargo.toml
datax-rs/app-server-client/src/: lib.rs  remote.rs
datax-rs/app-server-test-client/: BUILD.bazel  Cargo.toml  README.md
datax-rs/app-server-test-client/scripts/: live_elicitation_hold.sh
datax-rs/app-server-test-client/src/: lib.rs  main.rs  plugin_analytics_capture_tests.rs  plugin_analytics_mutation_smoke.rs  plugin_analytics_smoke.rs  request_user_input.rs  request_user_input_tests.rs
datax-rs/app-server/src/: analytics_utils.rs  app_server_tracing.rs  attestation.rs  bespoke_event_handling.rs  chat_state.rs  chat_status.rs  command_exec.rs  config_manager.rs  config_manager_service.rs  config_manager_service_tests.rs  current_time.rs  dynamic_tools.rs  extensions.rs  filters.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  main.rs  main_tests.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  models.rs  models_refresh_worker_tests.rs  outgoing_message.rs  request_processors.rs  request_serialization.rs  server_request_error.rs  skills_watcher.rs  thread_state.rs  thread_status.rs  transport.rs  transport_tests.rs
datax-rs/app-server/src/config/: external_agent_config.rs
datax-rs/app-server/src/request_processors/: account_processor.rs  apps_processor.rs  catalog_processor.rs  chat_delete.rs  chat_goal_processor.rs  chat_lifecycle.rs  chat_processor.rs  chat_processor_tests.rs  chat_resume_redaction.rs  chat_summary.rs  chat_summary_tests.rs  command_exec_processor.rs  config_processor.rs  external_agent_config_processor.rs  external_agent_session_import.rs  feedback_doctor_report.rs  feedback_processor.rs  fs_processor.rs  initialize_processor.rs  interaction_processor.rs  marketplace_processor.rs  mcp_processor.rs  plugins.rs  remote_control_processor.rs  thread_delete.rs  thread_goal_processor.rs  (+4 more)
datax-rs/arg0/: Cargo.toml
datax-rs/chatgpt/: BUILD.bazel  Cargo.toml
datax-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  connectors.rs  get_task.rs
datax-rs/cli/: BUILD.bazel  Cargo.toml
datax-rs/cli/src/: debug_sandbox.rs  lib.rs  login.rs  main.rs  remote_control_cmd.rs  state_db_recovery.rs  wsl_paths.rs
datax-rs/cli/tests/: app_server.rs  debug_clear_memories.rs  debug_models.rs  delete.rs  exec_server.rs  marketplace_add.rs  marketplace_remove.rs  marketplace_upgrade.rs  mcp_list.rs  plugin_cli.rs  sandbox_network_proxy.rs  update.rs
datax-rs/cloud-tasks/: BUILD.bazel  Cargo.toml
datax-rs/cloud-tasks-client/: BUILD.bazel  Cargo.toml
datax-rs/cloud-tasks-client/src/: api.rs  http.rs
datax-rs/cloud-tasks-mock-client/: BUILD.bazel  Cargo.toml
datax-rs/cloud-tasks-mock-client/src/: mock.rs
datax-rs/cloud-tasks/src/: app.rs  cli.rs  lib.rs  new_task.rs  util.rs
datax-rs/cloud-tasks/tests/: env_filter.rs
datax-rs/code-mode-protocol/: Cargo.toml
datax-rs/codex-home/: BUILD.bazel  Cargo.toml
datax-rs/codex-mcp/: Cargo.toml
datax-rs/codex-mcp/src/: auth_elicitation.rs  catalog.rs  catalog_tests.rs  codex_apps.rs  connection_manager_tests.rs  elicitation.rs  plugin_config.rs  resource_client.rs  rmcp_client.rs  runtime.rs
datax-rs/config/: BUILD.bazel  Cargo.toml
datax-rs/config/scripts/: generate-proto.sh
datax-rs/config/src/: cloud_config_layers.rs  cloud_config_layers_tests.rs  config_toml.rs  lib.rs  mcp_edit_tests.rs  mcp_types.rs  mcp_types_tests.rs  permissions_toml.rs  profile_toml.rs  state.rs  strict_config_tests.rs  thread_config.rs  tui_keymap.rs
datax-rs/context-fragments/: Cargo.toml
datax-rs/context-fragments/src/: additional_context.rs
datax-rs/core-api/: BUILD.bazel  Cargo.toml
datax-rs/core-api/src/: lib.rs
datax-rs/core-plugins/: BUILD.bazel  Cargo.toml
datax-rs/core-plugins/src/: app_mcp_routing.rs  app_mcp_routing_tests.rs  installed_marketplaces.rs  loader.rs  manager.rs  manager_tests.rs  manifest.rs  marketplace.rs  marketplace_upgrade.rs  provider.rs  remote.rs  remote_bundle.rs  remote_legacy.rs  startup_sync.rs  store.rs  test_support.rs  tool_suggest_metadata.rs
(+3100 files in other folders)
