[package]
name = "datax-backend-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
datax-backend-openapi-models = { path = "../codex-backend-openapi-models" }
datax-api = { workspace = true }
datax-client = { workspace = true }
datax-login = { workspace = true }
datax-model-provider = { workspace = true }
datax-protocol = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
