[package]
edition.workspace = true
license.workspace = true
name = "datax-core-skills"
version.workspace = true

[lib]
doctest = false
name = "datax_core_skills"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
datax-analytics = { workspace = true }
datax-app-server-protocol = { workspace = true }
datax-config = { workspace = true }
datax-context-fragments = { workspace = true }
datax-exec-server = { workspace = true }
datax-login = { workspace = true }
datax-model-provider = { workspace = true }
datax-otel = { workspace = true }
datax-protocol = { workspace = true }
datax-shell-command = { workspace = true }
datax-skills = { workspace = true }
datax-utils-absolute-path = { workspace = true }
datax-utils-output-truncation = { workspace = true }
datax-utils-path-uri = { workspace = true }
datax-utils-plugins = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
shlex = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
toml = { workspace = true }
tracing = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
