[package]
edition.workspace = true
license.workspace = true
name = "datax-model-provider"
version.workspace = true

[lib]
doctest = false
name = "datax_model_provider"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
datax-api = { workspace = true }
datax-agent-identity = { workspace = true }
datax-aws-auth = { workspace = true }
datax-client = { workspace = true }
datax-feedback = { workspace = true }
datax-login = { workspace = true }
datax-model-provider-info = { workspace = true }
datax-models-manager = { workspace = true }
datax-otel = { workspace = true }
datax-protocol = { workspace = true }
datax-response-debug-context = { workspace = true }
http = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock = { workspace = true }
