[package]
edition.workspace = true
license.workspace = true
name = "datax-models-manager"
version.workspace = true

[lib]
doctest = false
name = "datax_models_manager"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
datax-app-server-protocol = { workspace = true }
datax-collaboration-mode-templates = { workspace = true }
datax-login = { workspace = true }
datax-otel = { workspace = true }
datax-protocol = { workspace = true }
datax-utils-output-truncation = { workspace = true }
datax-utils-template = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync", "time"] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
