[package]
edition.workspace = true
license.workspace = true
name = "datax-plugin"
version.workspace = true

[lib]
doctest = false
name = "datax_plugin"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
datax-config = { workspace = true }
datax-protocol = { workspace = true }
datax-utils-absolute-path = { workspace = true }
datax-utils-plugins = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
