[package]
edition.workspace = true
license.workspace = true
name = "datax-rollout"
version.workspace = true

[lib]
doctest = false
name = "datax_rollout"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
datax-file-search = { workspace = true }
datax-git-utils = { workspace = true }
datax-login = { workspace = true }
datax-otel = { workspace = true }
datax-protocol = { workspace = true }
datax-state = { workspace = true }
datax-utils-path = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true, features = [
    "formatting",
    "local-offset",
    "macros",
    "parsing",
] }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt",
    "sync",
    "time",
] }
tracing = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
