[package]
name = "datax-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
age = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
datax-git-utils = { workspace = true }
datax-keyring-store = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
keyring = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[lib]
doctest = false
