[package]
name = "datax-stdio-to-uds"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "datax-stdio-to-uds"
path = "src/main.rs"

[lib]
name = "datax_stdio_to_uds"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
datax-uds = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "io-util",
    "macros",
    "rt-multi-thread",
] }

[dev-dependencies]
datax-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
