[package]
edition.workspace = true
license.workspace = true
name = "datax-tools"
version.workspace = true

[lints]
workspace = true

[dependencies]
datax-app-server-protocol = { workspace = true }
datax-code-mode = { workspace = true }
datax-features = { workspace = true }
datax-file-system = { workspace = true }
datax-protocol = { workspace = true }
datax-utils-absolute-path = { workspace = true }
datax-utils-output-truncation = { workspace = true }
datax-utils-pty = { workspace = true }
datax-utils-string = { workspace = true }
jsonptr = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
datax-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }

[lib]
doctest = false
