[package]
edition.workspace = true
license.workspace = true
name = "datax-agent-graph-store"
version.workspace = true

[lib]
name = "datax_agent_graph_store"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
datax-protocol = { workspace = true }
datax-state = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
