[package]
edition.workspace = true
license.workspace = true
name = "datax-analytics"
version.workspace = true

[lib]
doctest = false
name = "datax_analytics"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
datax-app-server-protocol = { workspace = true }
datax-git-utils = { workspace = true }
datax-login = { workspace = true }
datax-model-provider = { workspace = true }
datax-plugin = { workspace = true }
datax-protocol = { workspace = true }
datax-state = { workspace = true }
os_info = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
datax-utils-absolute-path = { workspace = true }
pretty_assertions = { workspace = true }
