[package]
name = "datax-app-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "datax_app_server_client"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
datax-app-server = { workspace = true }
datax-app-server-protocol = { workspace = true }
datax-arg0 = { workspace = true }
datax-config = { workspace = true }
datax-core = { workspace = true }
datax-exec-server = { workspace = true }
datax-feedback = { workspace = true }
datax-protocol = { workspace = true }
datax-uds = { workspace = true }
datax-utils-absolute-path = { workspace = true }
datax-utils-rustls-provider = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
