[package]
name = "datax-app-server-test-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
datax-app-server-protocol = { workspace = true }
datax-core = { workspace = true }
datax-otel = { workspace = true }
datax-protocol = { workspace = true }
datax-utils-cli = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tungstenite = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lib]
doctest = false

[dev-dependencies]
pretty_assertions = { workspace = true }
