[package]
name = "datax-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "datax-app-server"
path = "src/main.rs"

[[bin]]
name = "datax-app-server-test-notify-capture"
path = "src/bin/notify_capture.rs"

[[bin]]
name = "datax-exec-server"
path = "src/bin/exec_server.rs"

[lib]
name = "datax_app_server"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "ws",
] }
datax-analytics = { workspace = true }
datax-arg0 = { workspace = true }
datax-cloud-config = { workspace = true }
datax-config = { workspace = true }
datax-core = { workspace = true }
datax-core-plugins = { workspace = true }
datax-home = { workspace = true }
datax-exec-server = { workspace = true }
datax-extension-api = { workspace = true }
datax-external-agent-migration = { workspace = true }
datax-external-agent-sessions = { workspace = true }
datax-features = { workspace = true }
datax-goal-extension = { workspace = true }
datax-guardian = { workspace = true }
datax-git-utils = { workspace = true }
datax-file-watcher = { workspace = true }
datax-hooks = { workspace = true }
datax-otel = { workspace = true }
datax-plugin = { workspace = true }
datax-shell-command = { workspace = true }
datax-skills-extension = { workspace = true }
datax-utils-cli = { workspace = true }
datax-utils-pty = { workspace = true }
datax-backend-client = { workspace = true }
datax-file-search = { workspace = true }
datax-chatgpt = { workspace = true }
datax-login = { workspace = true }
datax-image-generation-extension = { workspace = true }
datax-memories-extension = { workspace = true }
datax-web-search-extension = { workspace = true }
datax-memories-write = { workspace = true }
datax-mcp = { workspace = true }
datax-mcp-extension = { workspace = true }
datax-model-provider = { workspace = true }
datax-models-manager = { workspace = true }
datax-protocol = { workspace = true }
datax-app-server-protocol = { workspace = true }
datax-app-server-transport = { workspace = true }
datax-feedback = { workspace = true }
datax-rmcp-client = { workspace = true }
datax-rollout = { workspace = true }
datax-sandboxing = { workspace = true }
datax-state = { workspace = true }
datax-thread-store = { workspace = true }
datax-tools = { workspace = true }
datax-utils-absolute-path = { workspace = true }
datax-utils-json-to-toml = { workspace = true }
datax-utils-path-uri = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[target.'cfg(windows)'.dependencies]
datax-windows-sandbox = { workspace = true }

[dev-dependencies]
app_test_support = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
base64 = { workspace = true }
datax-model-provider-info = { workspace = true }
datax-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
flate2 = { workspace = true }
hmac = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
rmcp = { workspace = true, default-features = false, features = [
    "elicitation",
    "server",
    "transport-streamable-http-server",
] }
serial_test = { workspace = true }
sha2 = { workspace = true }
shlex = { workspace = true }
tar = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true }
wiremock = { workspace = true }
