[package]
name = "datax-arg0"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "datax_arg0"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
datax-apply-patch = { workspace = true }
datax-exec-server = { workspace = true }
datax-install-context = { workspace = true }
datax-linux-sandbox = { workspace = true }
datax-sandboxing = { workspace = true }
datax-shell-escalation = { workspace = true }
datax-utils-absolute-path = { workspace = true }
datax-utils-home-dir = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
datax-windows-sandbox = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
