[package]
name = "datax-chatgpt"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
datax-app-server-protocol = { workspace = true }
datax-connectors = { workspace = true }
datax-core = { workspace = true }
datax-git-utils = { workspace = true }
datax-login = { workspace = true }
datax-model-provider = { workspace = true }
datax-plugin = { workspace = true }
datax-utils-cli = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
datax-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[lib]
doctest = false
