load("//:defs.bzl", "MACOS_WEBRTC_RUSTC_LINK_FLAGS", "codex_rust_crate")
load("//bazel/platforms:release_binaries.bzl", "multiplatform_binaries")

codex_rust_crate(
    name = "cli",
    crate_name = "datax_cli",
    extra_binaries = [
        "//datax-rs/bwrap:bwrap",
    ],
    rustc_flags_extra = MACOS_WEBRTC_RUSTC_LINK_FLAGS,
)

multiplatform_binaries(
    name = "datax",
)
