[package]
name = "datax-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "datax"
path = "src/main.rs"

[lib]
name = "datax_cli"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = { workspace = true }
datax-app-server = { workspace = true }
datax-app-server-daemon = { workspace = true }
datax-app-server-protocol = { workspace = true }
datax-app-server-test-client = { workspace = true }
datax-arg0 = { workspace = true }
datax-api = { workspace = true }
datax-chatgpt = { workspace = true }
datax-cloud-tasks = { path = "../cloud-tasks" }
datax-utils-cli = { workspace = true }
datax-config = { workspace = true }
datax-core = { workspace = true }
datax-core-plugins = { workspace = true }
datax-home = { workspace = true }
datax-exec = { workspace = true }
datax-exec-server = { workspace = true }
datax-execpolicy = { workspace = true }
datax-features = { workspace = true }
datax-git-utils = { workspace = true }
datax-install-context = { workspace = true }
datax-login = { workspace = true }
datax-memories-write = { workspace = true }
datax-mcp = { workspace = true }
datax-mcp-server = { workspace = true }
datax-model-provider = { workspace = true }
datax-models-manager = { workspace = true }
datax-plugin = { workspace = true }
datax-protocol = { workspace = true }
datax-responses-api-proxy = { workspace = true }
datax-rmcp-client = { workspace = true }
datax-rollout = { workspace = true }
datax-rollout-trace = { workspace = true }
datax-sandboxing = { workspace = true }
datax-state = { workspace = true }
datax-stdio-to-uds = { workspace = true }
datax-terminal-detection = { workspace = true }
datax-tui = { workspace = true }
datax-utils-absolute-path = { workspace = true }
datax-utils-path = { workspace = true }
crossterm = { workspace = true }
http = { workspace = true }
libc = { workspace = true }
os_info = { workspace = true }
owo-colors = { workspace = true }
regex-lite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
sys-locale = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "time",
] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
unicode-segmentation = { workspace = true }
url = { workspace = true }
which = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
datax_windows_sandbox = { package = "datax-windows-sandbox", path = "../windows-sandbox-rs" }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
datax-utils-cargo-bin = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
sqlx = { workspace = true }
wiremock = { workspace = true }
