[package]
edition.workspace = true
license.workspace = true
name = "datax-cloud-tasks-client"
version.workspace = true

[lib]
name = "datax_cloud_tasks_client"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
datax-api = { workspace = true }
datax-backend-client = { workspace = true }
datax-git-utils = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
