
[package]
edition.workspace = true
license.workspace = true
name = "datax-cloud-tasks-mock-client"
version.workspace = true

[lib]
name = "datax_cloud_tasks_mock_client"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
datax-cloud-tasks-client = { workspace = true }
diffy = { workspace = true }
