[package]
edition.workspace = true
license.workspace = true
name = "datax-cloud-tasks"
version.workspace = true

[lib]
name = "datax_cloud_tasks"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
datax-client = { workspace = true }
datax-cloud-tasks-client = { workspace = true }
# TODO: datax-cloud-tasks-mock-client should be in dev-dependencies.
datax-cloud-tasks-mock-client = { workspace = true }
datax-core = { workspace = true }
datax-git-utils = { workspace = true }
datax-login = { path = "../login" }
datax-model-provider = { workspace = true }
datax-tui = { workspace = true }
datax-utils-cli = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
owo-colors = { workspace = true, features = ["supports-colors"] }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unicode-width = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
