[package]
edition.workspace = true
license.workspace = true
name = "datax-code-mode-protocol"
version.workspace = true

[lib]
doctest = false
name = "datax_code_mode_protocol"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
datax-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "sync"] }
tokio-util = { workspace = true, features = ["rt"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
