[package]
edition.workspace = true
license.workspace = true
name = "datax-home"
version.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
datax-extension-api = { workspace = true }
datax-utils-absolute-path = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
