[package]
edition.workspace = true
license.workspace = true
name = "datax-mcp"
version.workspace = true

[lib]
name = "datax_mcp"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-channel = { workspace = true }
datax-async-utils = { workspace = true }
datax-api = { workspace = true }
datax-config = { workspace = true }
datax-exec-server = { workspace = true }
datax-login = { workspace = true }
datax-model-provider = { workspace = true }
datax-otel = { workspace = true }
datax-plugin = { workspace = true }
datax-protocol = { workspace = true }
datax-rmcp-client = { workspace = true }
datax-utils-path-uri = { workspace = true }
datax-utils-plugins = { workspace = true }
futures = { workspace = true }
regex-lite = { workspace = true }
rmcp = { workspace = true, default-features = false, features = ["base64", "macros", "schemars", "server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rmcp = { workspace = true, default-features = false, features = ["base64", "macros", "schemars", "server"] }
tempfile = { workspace = true }
