[package]
edition.workspace = true
license.workspace = true
name = "datax-context-fragments"
version.workspace = true

[lib]
name = "datax_context_fragments"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
datax-protocol = { workspace = true }
datax-utils-string = { workspace = true }
