[package]
edition.workspace = true
license.workspace = true
name = "datax-core-api"
version.workspace = true

[lib]
doctest = false
name = "datax_core_api"
path = "src/lib.rs"
test = false

[lints]
workspace = true

[dependencies]
datax-app-server-protocol = { workspace = true }
datax-arg0 = { workspace = true }
datax-analytics = { workspace = true }
datax-config = { workspace = true }
datax-core = { workspace = true }
datax-extension-api = { workspace = true }
datax-home = { workspace = true }
datax-exec-server = { workspace = true }
datax-features = { workspace = true }
datax-login = { workspace = true }
datax-model-provider-info = { workspace = true }
datax-models-manager = { workspace = true }
datax-protocol = { workspace = true }
datax-utils-absolute-path = { workspace = true }
