[package]
edition.workspace = true
license.workspace = true
name = "datax-core-plugins"
version.workspace = true

[lib]
doctest = false
name = "datax_core_plugins"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
datax-analytics = { workspace = true }
datax-app-server-protocol = { workspace = true }
datax-config = { workspace = true }
datax-core-skills = { workspace = true }
datax-exec-server = { workspace = true }
datax-git-utils = { workspace = true }
datax-hooks = { workspace = true }
datax-login = { workspace = true }
datax-mcp = { workspace = true }
datax-model-provider = { workspace = true }
datax-otel = { workspace = true }
datax-plugin = { workspace = true }
datax-protocol = { workspace = true }
datax-tools = { workspace = true }
datax-utils-absolute-path = { workspace = true }
datax-utils-path-uri = { workspace = true }
datax-utils-plugins = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt", "time"] }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
libc = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
wiremock = { workspace = true }
